lesson23/diagnostic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: diagnostic-pod
  namespace: dev
spec:
  serviceAccountName: diagnostic-sa
  containers:
    - name: diagnostic
      image: bitnami/kubectl:latest
      command: ["/bin/sh", "-c", "while true; do kubectl get pods -n dev; sleep 60; done"]
